@@ -174,6 +174,30 @@ w/generic functions, so need to test.)
 ``activateContainingClass()`` depth/frame
 
 
+Misc. Attribute-Related APIs
+============================
 
+Attribute Initialization
+------------------------
+
+Many PEAK constructors accept keyword arguments that are used to set initial
+attribute values on the object.  You can do the same, using the
+``binding.initAttrs(ob,attrs)`` function.  For example::
+
+    >>> class MyClass:
+    ...     x = 1
+    ...     y = 2
+    ...     def __init__(self, **kw):
+    ...         binding.initAttrs(self, kw.items())
+    >>> c = MyClass(x=3,y=4)
+    >>> c.x, c.y
+    (3, 4)
+    >>> c = MyClass(y=99)
+    >>> c.x, c.y
+    (1, 99)
+    >>> c = MyClass(foo="bar")
+    Traceback (most recent call last):
+    ...
+    TypeError: ... constructor has no keyword argument foo
 
 
